policies/bundles/psp-v2022/psp-privileged-container.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-v2022-psp-privileged-container
  labels:
    policycontroller.gke.io/bundleName: psp-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202312.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-constraints-to-enforce-pod-security',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Controls the ability of any container to enable privileged mode. Corresponds to the `privileged` field in a PodSecurityPolicy.',
        remediation: 'Containers cannot run with `securityContext.privileged` set to `true`. Remove `securityContext.privileged: true` from your containers. See "Configure a Security Context for a Pod or Container" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '3fc1fd6e2f25d540d772aff54daa83c205807985d881aaab6418c25361c5f9a0'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - clamav
  # K8sPSPPrivilegedContainer documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spspprivilegedcontainer
  parameters: {}
